public/content/@ks-qkcp-en/v4.1/03-installation-and-upgrade/04-uninstall-kubesphere/02-uninstall-kubernetes-and-kubesphere.adoc
---
title: "Uninstall Kubernetes and KubeSphere Enterprise"
keywords: "Kubernetes, KubeSphere Enterprise, Uninstall Kubernetes and KubeSphere Enterprise"
description: "Learn how to uninstall Kubernetes and KubeSphere Enterprise."
weight: 02
---

This section explains how to uninstall Kubernetes and KubeSphere Enterprise.

// Note
include::../../../../_ks_components-en/admonitions/note.adoc[]

The uninstallation method for Kubernetes described in this section only applies to Kubernetes installed using KubeKey. If your Kubernetes is not installed through KubeKey, please refer to the link:https://kubernetes.io/zh/docs/reference/setup-tools/kubeadm/kubeadm-reset/[Kubernetes documentation] for uninstallation instructions.

include::../../../../_ks_components-en/admonitions/admonEnd.adoc[]

// Warning
include::../../../../_ks_components-en/admonitions/warning.adoc[]

The uninstallation will cause business interruption to the KubeSphere Enterprise cluster and cannot be undone. Please proceed with caution.

include::../../../../_ks_components-en/admonitions/admonEnd.adoc[]


== Prerequisites

* You should get the installation configuration file **config-sample.yaml** and transfer it to the cluster nodes where you will perform the uninstallation. For more information, refer to link:../../../03-installation-and-upgrade/02-install-kubesphere/02-install-kubernetes-and-kubesphere[Install Kubernetes and KubeSphere Enterprise].

+
[.admon.note,cols="a"]
|===
|Note

|
If you are unable to get the installation configuration file **config-sample.yaml**, you need to refer to link:../../../03-installation-and-upgrade/02-install-kubesphere/02-install-kubernetes-and-kubesphere[Install Kubernetes and KubeSphere Enterprise] to recreate the **config-sample.yaml** file. When recreating the file, make sure that the cluster information in the file matches the current state of the cluster. Otherwise, the uninstallation process may encounter errors.
|===

* {empty}
include::../../../_custom-en/installationAndUpgrade/installationAndUpgrade-prer-backUpData.adoc[]


== Steps

include::../../../_custom-en/installationAndUpgrade/installationAndUpgrade-oper-decompressInstallationPackage_new.adoc[]


+
include::../../../_custom-en/installationAndUpgrade/installationAndUpgrade-oper-transferConfig.adoc[]

+

. Execute the following command to start uninstalling KubeSphere Enterprise:
+
--
// Bash
include::../../../../_ks_components-en/code/bash.adoc[]

./kk delete cluster -f config-sample.yaml

include::../../../../_ks_components-en/code/codeEnd.adoc[]

If you see the following message, it means the uninstallation is successful:

// Bash
include::../../../../_ks_components-en/code/bash.adoc[]

Pipeline[DeleteClusterPipeline] execute successful

include::../../../../_ks_components-en/code/codeEnd.adoc[]
--